--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -370,6 +370,74 @@
 			"errorMessage": "Помилка при встановленні нового пароля"
 		}
 	},
+	"contactSales": {
+		"badge": "Рішення для бізнесу",
+		"title": "Розвиваймося разом",
+		"subtitle": "Трансформуйте свій бізнес за допомогою наших корпоративних рішень, адаптованих до ваших унікальних викликів та цілей",
+		"featuresTitle": "Особливості для бізнесу",
+		"faqsTitle": "Часті запитання",
+		"contact": {
+			"heading": "Зв'яжіться з відділом продажів",
+			"nameLabel": "Повне ім'я",
+			"emailLabel": "Пошта",
+			"companyLabel": "Компанія",
+			"messageLabel": "Повідомлення",
+			"messagePlaceholder": "Розкажіть нам про свої потреби та виклики",
+			"submitButton": "Надіслати",
+			"successMessage": "Повідомлення успішно надіслано. Наш менеджер зв'яжеться з вами найближчим часом.",
+			"errorMessage": "Помилка надсилання повідомлення"
+		},
+		"features": [
+			{
+				"icon": "Users",
+				"title": "Необмежена кількість користувачів",
+				"description": "Розширюйте команду без обмежень"
+			},
+			{
+				"icon": "MessageSquare",
+				"title": "Виділена підтримка",
+				"description": "Пріоритетна технічна підтримка 24/7"
+			},
+			{
+				"icon": "Shield",
+				"title": "Корпоративна безпека",
+				"description": "Розширена безпека та відповідність стандартам"
+			},
+			{
+				"icon": "BarChart3",
+				"title": "Розширена аналітика",
+				"description": "Глибокий аналіз ваших даних"
+			},
+			{
+				"icon": "Clock",
+				"title": "99.99% доступності",
+				"description": "Гарантована надійність"
+			},
+			{
+				"icon": "Zap",
+				"title": "Оптимізація продуктивності",
+				"description": "Індивідуальні рішення для максимальної ефективності"
+			}
+		],
+		"faqs": [
+			{
+				"question": "Що включає в себе Enterprise план?",
+				"answer": "Enterprise план включає всі функції Pro плану, а також додаткові можливості, такі як виділений менеджер облікового запису, пріоритетна підтримка, настроювані інтеграції та розширена аналітика. Ми також пропонуємо індивідуальні рішення, адаптовані під ваші конкретні потреби."
+			},
+			{
+				"question": "Як відбувається процес переходу на Enterprise план?",
+				"answer": "Після того, як ви зв’яжетеся з нами, наш менеджер з обслуговування клієнтів проведе детальну консультацію, щоб зрозуміти ваші потреби. Потім ми створимо персоналізовану пропозицію та план міграції. Наша команда буде супроводжувати вас на кожному етапі, забезпечуючи плавний перехід."
+			},
+			{
+				"question": "Який рівень підтримки надається клієнтам Enterprise?",
+				"answer": "Клієнти Enterprise отримують пріоритетну підтримку 24/7 з гарантованим часом відповіді. У вас буде виділений менеджер облікового запису, який стане вашим основним контактним лицем для всіх запитань та запитів."
+			},
+			{
+				"question": "Чи можна налаштувати Enterprise план під наші специфічні потреби?",
+				"answer": "Наш Enterprise план розроблено для максимальної гнучкості та адаптації. Ми тісно співпрацюємо з кожним клієнтом, щоб зрозуміти їхні унікальні вимоги та відповідно налаштувати наші рішення. Це може включати індивідуальні інтеграції, специфічні протоколи безпеки або унікальні функції, розроблені спеціально для вашої організації."
+			}
+		]
+	},
 	"components": {
 		"confirmModal": {
 			"cancel": "Скасувати",
