feat(user): add user profile page

--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -8,9 +8,11 @@
 			"heading": "YOUR PROJECTS",
 			"task": "Tasks",
 			"analytics": "Analytics",
-			"docs": "Docs"
+			"docs": "Docs",
+			"settings": "Settings"
 		},
 		"user": {
+			"profile": "Profile",
 			"settings": "Settings",
 			"logout": "Logout"
 		}
