--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -8,9 +8,11 @@
 			"heading": "ВАШІ ПРОЄКТИ",
 			"task": "Завдання",
 			"analytics": "Аналітика",
-			"docs": "Документи"
+			"docs": "Документи",
+			"settings": "Налаштування"
 		},
 		"user": {
+			"profile": "Профіль",
 			"settings": "Налаштування",
 			"logout": "Вийти"
 		}
