refactor(intl): add translations to dashboard

--- a/public/languages/ua.json
+++ b/public/languages/ua.json
@@ -1,4 +1,215 @@
 {
+	"landing": {
+		"header": {
+			"features": {
+				"heading": "Можливості",
+				"description": "Універсальне рішення для управління проєктами в сучасних командах",
+				"taskManagement": "Управління завданнями",
+				"taskManagementDescription": "Організовуйте, пріоритезуйте та відстежуйте завдання ефективно",
+				"teamCollaboration": "Спільна робота в команді",
+				"teamCollaborationDescription": "Обмін файлами та комунікація в режимі реального часу",
+				"analytics": "Аналітика та звітність",
+				"analyticsDescription": "Докладна аналітика для оцінки продуктивності проєктів"
+			},
+			"solutions": {
+				"heading": "Рішення",
+				"startaps": "Для стартапів",
+				"startapsDescription": "Масштабуйте свою діяльність з мінімальними витратами",
+				"enterprise": "Для підприємств",
+				"enterpriseDescription": "Індивідуальні рішення для великого бізнесу",
+				"agency": "Для агентств",
+				"agencyDescription": "Зручне управління кількома клієнтами та проєктами",
+				"remote": "Для віддалених команд",
+				"remoteDescription": "Залишайтеся на зв’язку та працюйте продуктивно з будь-якої точки світу"
+			},
+			"pricing": "Ціни",
+			"button": "Почати"
+		},
+		"hero": {
+			"heading": "Оптимізуйте свої проєкти з",
+			"description": "Універсальна платформа для управління проєктами, яка допомагає командам\n\t\t\t\t\t\t\t\tспівпрацювати, відстежувати прогрес і досягати результатів швидше,\n\t\t\t\t\t\t\t\tніж будь-коли раніше.",
+			"button": "Почати",
+			"teamsFirst": "Приєднуйтесь до",
+			"teamsSecond": "команд, які використовують нашу платформу"
+		},
+		"features": {
+			"badge": "Функції",
+			"heading": "Все, що потрібно для ефективного управління проектами",
+			"description": "TEAMIX поєднує потужні можливості з інтуїтивно зрозумілим інтерфейсом, щоб допомогти вашій команді виконувати проєкти вчасно та в межах бюджету.",
+			"projectPlanning": {
+				"heading": "Планування проєктів",
+				"description": "Створюйте детальні плани проєктів із таймлайнами, етапами та залежностями, щоб усі були на одній хвилі."
+			},
+			"documentManagement": {
+				"heading": "Управління документами",
+				"description": "Зберігайте та організовуйте документи проєкту в єдиному централізованому сховищі для зручного доступу та обміну."
+			},
+			"teamCollaboration": {
+				"heading": "Співпраця в команді",
+				"description": "Забезпечте безперебійну взаємодію завдяки обміну файлами, реальному часу комунікації та розподілу завдань."
+			},
+			"chat": {
+				"heading": "Вбудований чат",
+				"description": "Спілкуйтеся з командою, не перемикаючись між додатками, щоб зберегти контекст обговорень."
+			},
+			"analytics": {
+				"heading": "Аналітика та звіти",
+				"description": "Отримуйте цінні інсайти завдяки налаштованим інформаційним панелям та детальним звітам про продуктивність."
+			},
+			"automation": {
+				"heading": "Автоматизація",
+				"description": "Автоматизуйте рутинні завдання та робочі процеси, щоб заощадити час і зменшити ручну роботу."
+			}
+		},
+		"howItWorks": {
+			"badge": "Як це працює",
+			"heading": "Почніть у чотири прості кроки",
+			"description": "TEAMIX спрощує налаштування та допомагає швидко запустити вашу команду завдяки інтуїтивному процесу налаштування.",
+			"step1": {
+				"heading": "Створіть проєкт",
+				"description": "Налаштуйте робочий простір, створивши новий проєкт і адаптувавши його параметри під свої потреби."
+			},
+			"step2": {
+				"heading": "Запросіть команду",
+				"description": "Додайте учасників команди, визначте їхні ролі та налаштуйте дозволи відповідно до їхніх обов’язків."
+			},
+			"step3": {
+				"heading": "Сплануйте роботу",
+				"description": "Створюйте завдання, встановлюйте дедлайни та призначайте їх учасникам команди для ефективного старту."
+			},
+			"step4": {
+				"heading": "Відстежуйте прогрес",
+				"description": "Контролюйте хід виконання проєкту, відстежуйте час і створюйте звіти, щоб завжди бути в курсі справ."
+			}
+		},
+		"testimonials": {
+			"badge": "Відгуки",
+			"heading": "Нам довіряють команди по всьому світу",
+			"description": "Дізнайтеся, що кажуть наші клієнти про те, як TEAMIX змінив їхній підхід до управління проєктами.",
+			"customer1": {
+				"quote": "TEAMIX змінив спосіб співпраці нашої команди. Ми скоротили час на зустрічі на 30% і значно прискорили виконання проєктів.",
+				"author": "Сара Джонсон",
+				"role": "Продакт-менеджер"
+			},
+			"customer2": {
+				"quote": "Інтуїтивний інтерфейс та потужні функції роблять TEAMIX ідеальним рішенням для нашої агенції. Тепер ми легко керуємо кількома клієнтськими проєктами одночасно.",
+				"author": "Майкл Чен",
+				"role": "Креативний директор"
+			},
+			"customer3": {
+				"quote": "З моменту впровадження TEAMIX наша віддалена команда відчуває себе більш згуртованою, ніж будь-коли. Інструменти для спільної роботи в реальному часі стали для нас справжнім проривом.",
+				"author": "Емма Родрігес",
+				"role": "Тімлід"
+			},
+			"customer4": {
+				"quote": "Аналітика та звітність у TEAMIX дають нам безпрецедентну прозорість у виконанні проєктів і продуктивності команди.",
+				"author": "Девід Кім",
+				"role": "CTO"
+			}
+		},
+		"pricing": {
+			"title": "Ціни",
+			"subtitle": "Просте та прозоре ціноутворення",
+			"description": "Обирайте план, який підходить вашій команді. Усі плани включають 14-денний безкоштовний пробний період.",
+			"mostPopular": "Найпопулярніший",
+			"perMonth": "/місяць",
+			"button": "Почати",
+			"plans": [
+				{
+					"name": "Безкоштовний",
+					"description": "Ідеально підходить для малих команд, які тільки починають",
+					"price": 0,
+					"features": [
+						"До 5 учасників команди",
+						"5 проєктів",
+						"Базова аналітика",
+						"Управління завданнями",
+						"1 ГБ сховища",
+						"Підтримка електронною поштою"
+					]
+				},
+				{
+					"name": "Pro",
+					"description": "Ідеально для зростаючих команд із більш складними потребами",
+					"price": 10,
+					"features": [
+						"До 20 учасників команди",
+						"Необмежена кількість проєктів",
+						"Розширена аналітика",
+						"Відстеження часу",
+						"10 ГБ сховища",
+						"Пріоритетна підтримка",
+						"Користувацькі поля",
+						"Автоматизація"
+					]
+				},
+				{
+					"name": "Enterprise",
+					"description": "Розширені можливості для великих організацій",
+					"price": 49,
+					"features": [
+						"Необмежена кількість учасників команди",
+						"Необмежена кількість проєктів",
+						"Користувацька аналітика",
+						"Розширена безпека",
+						"100 ГБ сховища",
+						"Цілодобова підтримка",
+						"Доступ до API",
+						"SSO-інтеграція",
+						"Персональний менеджер"
+					]
+				}
+			]
+		},
+		"cta": {
+			"title": "Готові змінити підхід до роботи вашої команди?",
+			"description": "Приєднуйтесь до тисяч команд, які вже використовують TEAMIX для швидшого та ефективнішого управління проєктами.",
+			"benefits": [
+				"Без прив’язки до банківської картки",
+				"Скасування в будь-який момент",
+				"Цілодобова підтримка"
+			]
+		},
+		"footer": {
+			"description": "Універсальна платформа для управління проєктами для сучасних команд.",
+			"social": {
+				"twitter": "Twitter",
+				"facebook": "Facebook",
+				"instagram": "Instagram",
+				"linkedin": "LinkedIn"
+			},
+			"product": {
+				"title": "Продукт",
+				"features": "Функції",
+				"pricing": "Ціни",
+				"integrations": "Інтеграції",
+				"changelog": "Журнал змін",
+				"roadmap": "Дорожня карта"
+			},
+			"company": {
+				"title": "Компанія",
+				"about": "Про нас",
+				"blog": "Блог",
+				"careers": "Кар'єра",
+				"customers": "Клієнти",
+				"contact": "Контакти"
+			},
+			"resources": {
+				"title": "Ресурси",
+				"documentation": "Документація",
+				"guides": "Посібники",
+				"helpCenter": "Центр підтримки",
+				"api": "API",
+				"community": "Спільнота"
+			},
+			"legal": {
+				"termsOfService": "Умови використання",
+				"privacyPolicy": "Політика конфіденційності",
+				"cookiePolicy": "Політика щодо cookies"
+			},
+			"copyright": "© {year} TEAMIX. Всі права захищено."
+		}
+	},
 	"sidebar": {
 		"main": {
 			"dashboard": "Домашня",
