--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -1,4 +1,211 @@
 {
+	"landing": {
+		"header": {
+			"features": {
+				"heading": "Features",
+				"description": "All-in-one project management solution for modern teams",
+				"taskManagement": "Task Management",
+				"taskManagementDescription": "Organize, prioritize, and track tasks efficiently",
+				"teamCollaboration": "Team Collaboration",
+				"teamCollaborationDescription": "Real-time communication and file sharing",
+				"analytics": "Analytics & Reporting",
+				"analyticsDescription": "Comprehensive insights into project performance"
+			},
+			"solutions": {
+				"heading": "Solutions",
+				"startaps": "For Startups",
+				"startapsDescription": "Scale your operations with minimal overhead",
+				"enterprise": "For Enterprises",
+				"enterpriseDescription": "Custom solutions for large-scale operations",
+				"agency": "For Agencies",
+				"agencyDescription": "Manage multiple clients and projects seamlessly",
+				"remote": "For Remote Teams",
+				"remoteDescription": "Stay connected and productive from anywhere"
+			},
+			"pricing": "Pricing",
+			"button": "Get Started"
+		},
+		"hero": {
+			"heading": "Streamline Your Projects with",
+			"description": "The all-in-one project management platform that helps teams\n\t\t\t\t\t\t\t\tcollaborate, track progress, and deliver results faster than\n\t\t\t\t\t\t\t\tever before.",
+			"button": "Get Started",
+			"teamsFirst": "Join",
+			"teamsSecond": "teams using our platform"
+		},
+		"features": {
+			"badge": "Features",
+			"heading": "Everything you need to manage projects effectively",
+			"description": "TEAMIX combines powerful features with an intuitive interface to help your team deliver projects on time and within budget.",
+			"projectPlanning": {
+				"heading": "Project Planning",
+				"description": "Create detailed project plans with timelines, milestones, and dependencies to keep everyone aligned."
+			},
+			"documentManagement": {
+				"heading": "Document Management",
+				"description": "Store and organize project documents in a centralized location for easy access and sharing."
+			},
+			"teamCollaboration": {
+				"heading": "Team Collaboration",
+				"description": "Foster seamless collaboration with real-time communication, file sharing, and task assignments."
+			},
+			"chat": {
+				"heading": "Integrated Chat",
+				"description": "Communicate with your team without switching between apps, keeping discussions in context."
+			},
+			"analytics": {
+				"heading": "Analytics & Reporting",
+				"description": "Gain valuable insights with customizable dashboards and detailed performance reports."
+			},
+			"automation": {
+				"heading": "Automation",
+				"description": "Automate routine tasks and workflows to save time and reduce manual effort."
+			}
+		},
+		"howItWorks": {
+			"badge": "How It Works",
+			"heading": "Get started in four simple steps",
+			"description": "TEAMIX makes it easy to get your team up and running quickly with an intuitive setup process.",
+			"step1": {
+				"heading": "Create your project",
+				"description": "Set up your workspace by creating a new project and customizing its settings."
+			},
+			"step2": {
+				"heading": "Invite your team",
+				"description": "Add team members and assign roles and permissions based on their responsibilities."
+			},
+			"step3": {
+				"heading": "Plan your work",
+				"description": "Create tasks, set deadlines, and assign them to team members to get started."
+			},
+			"step4": {
+				"heading": "Track progress",
+				"description": "Monitor project progress, track time, and generate reports to stay on top of your work."
+			}
+		},
+		"testimonials": {
+			"badge": "Testimonials",
+			"heading": "Trusted by teams worldwide",
+			"description": "See what our customers have to say about how TEAMIX has transformed their project management.",
+			"customer1": {
+				"quote": "TEAMIX has transformed how our team collaborates. We've reduced meeting time by 30% and increased project delivery speed significantly.",
+				"author": "Sarah Johnson",
+				"role": "Product Manager"
+			},
+			"customer2": {
+				"quote": "The intuitive interface and powerful features make TEAMIX the perfect solution for our agency. We can now manage multiple client projects with ease.",
+				"author": "Michael Chen",
+				"role": "Creative Director"
+			},
+			"customer3": {
+				"quote": "Since implementing TEAMIX, our remote team feels more connected than ever. The real-time collaboration tools have been a game-changer for us.",
+				"author": "Emma Rodriguez",
+				"role": "Team Lead"
+			},
+			"customer4": {
+				"quote": "The analytics and reporting features in TEAMIX give us unprecedented visibility into our project performance and team productivity.",
+				"author": "David Kim",
+				"role": "CTO"
+			}
+		},
+		"pricing": {
+			"title": "Pricing",
+			"subtitle": "Simple, transparent pricing",
+			"description": "Choose the plan that's right for your team. All plans include a 14-day free trial.",
+			"mostPopular": "Most Popular",
+			"perMonth": "/month",
+			"button": "Get Started",
+			"plans": [
+				{
+					"name": "Free",
+					"description": "Perfect for small teams just getting started",
+					"price": 0,
+					"features": [
+						"Up to 5 team members",
+						"5 projects",
+						"Basic reporting",
+						"Task management",
+						"1GB storage",
+						"Email support"
+					]
+				},
+				{
+					"name": "Pro",
+					"description": "Ideal for growing teams with more complex needs",
+					"price": 10,
+					"features": [
+						"Up to 20 team members",
+						"Unlimited projects",
+						"Advanced reporting",
+						"Time tracking",
+						"10GB storage",
+						"Priority support",
+						"Custom fields",
+						"Automations"
+					]
+				},
+				{
+					"name": "Enterprise",
+					"description": "Advanced features for large organizations",
+					"price": 49,
+					"features": [
+						"Unlimited team members",
+						"Unlimited projects",
+						"Custom reporting",
+						"Advanced security",
+						"100GB storage",
+						"24/7 support",
+						"API access",
+						"SSO integration",
+						"Dedicated account manager"
+					]
+				}
+			]
+		},
+		"cta": {
+			"title": "Ready to transform how your team works?",
+			"description": "Join thousands of teams already using TEAMIX to deliver projects faster and more efficiently.",
+			"benefits": ["No credit card required", "Cancel anytime", "24/7 support"]
+		},
+		"footer": {
+			"description": "The all-in-one project management platform for modern teams.",
+			"social": {
+				"twitter": "Twitter",
+				"facebook": "Facebook",
+				"instagram": "Instagram",
+				"linkedin": "LinkedIn"
+			},
+			"product": {
+				"title": "Product",
+				"features": "Features",
+				"pricing": "Pricing",
+				"integrations": "Integrations",
+				"changelog": "Changelog",
+				"roadmap": "Roadmap"
+			},
+			"company": {
+				"title": "Company",
+				"about": "About",
+				"blog": "Blog",
+				"careers": "Careers",
+				"customers": "Customers",
+				"contact": "Contact"
+			},
+			"resources": {
+				"title": "Resources",
+				"documentation": "Documentation",
+				"guides": "Guides",
+				"helpCenter": "Help Center",
+				"api": "API",
+				"community": "Community"
+			},
+			"legal": {
+				"termsOfService": "Terms of Service",
+				"privacyPolicy": "Privacy Policy",
+				"cookiePolicy": "Cookie Policy"
+			},
+			"copyright": "© {year} TEAMIX. All rights reserved."
+		}
+	},
 	"sidebar": {
 		"main": {
 			"dashboard": "Dashboard",
